<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ro.adlabs.nofap.activity.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:weightSum="100">

        <!-- Emergency -->
        <LinearLayout
            android:id="@+id/ll_emergency"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="40"
            android:background="@color/button_red">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="120dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/redcross" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_em"
                    android:textColor="@color/color_white"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

        <!-- Rejection -->
        <LinearLayout
            android:id="@+id/ll_rejection"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="15"
            android:background="@color/button_green">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rej"
                    android:textColor="@color/color_white"
                    android:textSize="30sp" />
            </LinearLayout>

        </LinearLayout>

        <!-- Depression -->
        <LinearLayout
            android:id="@+id/ll_depression"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="30"
            android:background="@color/button_blue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_dep"
                    android:textColor="@color/color_white"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>


        <!-- Relapsed -->
        <LinearLayout
            android:id="@+id/ll_relapsed"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:layout_weight="15"
            android:background="@color/button_purple">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_rel"
                    android:textColor="@color/color_white"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_religious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/background_gray"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/cb_religious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/color_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/text_religious"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
